<resources>
    <string name="app_name">ForAll</string>
    <string name="RB1">Vibração</string>
    <string name="RB2">Lanterna</string>
    <string name="RB3">Microfone</string>
    <string name="RB4">Tempo</string>
    <string name="RBa">Escolha o método de sinalização:</string>
    <string name="RBb">Escolha o método de entrada:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="OFF">Ativar</string>
    <string name="ON">Desativar</string>
    <string name="userTime">Insira o tempo do ciclo em milissegundos:</string>
    <string name="curta">Curta</string>
    <string name="m_dia">Média</string>
    <string name="longa">Longa</string>
    <string name="escolha_o_tempo_de_sinaliza_o">Escolha o tempo de sinalização:</string>
    <string name="escolha_o_n_mero_de_sinaliza_es_por_ciclo">Escolha o número de sinalizações por ciclo:</string>
    <string name="uma">Uma</string>
    <string name="duas">Duas</string>
    <string name="nomeArq">Insira o nome do .txt a ser salvo (BETA)</string>
    <string name="nomeTXT">Amostras</string>
    <string name="rede_neural">Sinal</string>
    <string name="musicas">Músicas</string>
    <string name="unidade">ms</string>
</resources>
